--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,8 @@
+# ── Supabase (Core AI auth + ai_logs) ──
+# Same project as frontend. Service role key: Settings → API → service_role (secret)
+SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
 # ── Core AI (Gemini) ──
 # Get your key from: https://aistudio.google.com/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
