--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "@google-cloud/speech": "^6.0.0",
     "@google-cloud/text-to-speech": "^5.0.0",
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.97.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "multer": "^1.4.5-lts.1"
   }
 }
